tests/fixtures/invalid/int_bitwise_float.py
# Test int bitwise with float (should fail)
x: int = 5
y: float = 3.14
result: int = x & y
